--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@ body {
   color: white;
 }
 
+p,
+h2 {
+  font-family: "Courier New", Courier, monospace;
+}
+
 h1 {
   font-size: 50px;
+  font-family: "Courier New", Courier, monospace;
 }
 
 code {
