--- a/src/components/Suggestion/suggestion.css
+++ b/src/components/Suggestion/suggestion.css
@@ -35,4 +35,9 @@ a:hover {
   color: rgb(176, 105, 116);
   padding-bottom: 30px;
   border-radius: 10px;
+  display: none;
+}
+
+.show {
+  display: block;
 }
