--- a/src/components/Suggestion/suggestion.css
+++ b/src/components/Suggestion/suggestion.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .card {
-  margin-top: 50px;
+  margin-top: 30px;
   width: 40%;
   background-color: white;
   align-items: center;
@@ -33,11 +33,18 @@ a:hover {
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
   color: rgb(176, 105, 116);
-  padding-bottom: 30px;
+  padding: 30px;
   border-radius: 10px;
   display: none;
+  margin-bottom: 30px;
 }
 
 .show {
   display: block;
+}
+
+.type,
+.participants {
+  font-family: Poiret One;
+  font-size: 18px;
 }
