Adjusted to react syntax for when card is visible

--- a/src/components/Suggestion/suggestion.css
+++ b/src/components/Suggestion/suggestion.css
@@ -35,7 +35,7 @@ a:hover {
   color: rgb(176, 105, 116);
   padding-bottom: 30px;
   border-radius: 10px;
-  display: none;
+  /* display: none; */
 }
 
 .show {
