--- a/src/components/Suggestion/suggestion.css
+++ b/src/components/Suggestion/suggestion.css
@@ -24,19 +24,11 @@ a:hover {
 }
 
 .card {
-  margin-top: 30px;
-  width: 40%;
-  background-color: white;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-
+  /* align-items: center; */
   color: rgb(176, 105, 116);
   padding: 30px;
-  border-radius: 10px;
-  /* display: none; */
-  margin-bottom: 30px;
+  position: relative;
+  text-align: center;
 }
 
 .show {
@@ -47,4 +39,11 @@ a:hover {
 .participants {
   font-family: Poiret One;
   font-size: 18px;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
