--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ h1 {
   margin-bottom: 20px;
   margin-top: 20px;
   font-weight: 100;
+  margin-bottom: 0;
 }
 
 .card h1 {
@@ -25,6 +26,7 @@ h2 {
   font-family: Poiret One;
   font-size: 40px;
   font-weight: 100;
+  margin-top: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
